syntax = "proto3";


option java_package = "com.smartfarming.farm2";
option java_multiple_files = true;
option java_outer_classname = "FarmServiceImpl2";


package farm;


service FarmService2{

rpc animalCount(CountRequest) returns (CountResponse){}
rpc priceIncrease(AnimalRequest) returns (stream AnimalResponse){}






}


message CountRequest{
string animal1 = 1;
string animal2 = 2;

}


message CountResponse{
int32 result = 1;
}



message AnimalResponse {
string message= 1;
}


message AnimalRequest {

string animal =1;
int32 price = 3;
}
  
 


